# lodestone

./: .gitignore  CLAUDE.md  Cargo.toml  Lodestone.entitlements  README.md  build.rs
.cargo/: config.toml
.claude/: settings.local.json
docs/: BRIEF.md  shader-authoring-guide.md
docs/superpowers/plans/: 2026-03-19-dockable-panels.md  2026-03-19-dockview-layout.md  2026-03-19-lodestone-mvp.md  2026-03-20-preview-panel-wiring.md  2026-03-21-gstreamer-obs-integration.md  2026-03-21-settings-window.md  2026-03-21-unify-panel-logic.md  2026-03-22-audio-capture.md  2026-03-22-multi-source-compositor.md  2026-03-22-scene-construction.md  2026-03-22-ui-overhaul.md  2026-03-23-codebase-audit-simplification.md  2026-03-23-image-sources.md  2026-03-23-source-library.md  2026-03-23-transform-handles.md  2026-03-23-virtual-canvas-scaling.md  2026-03-23-window-camera-capture.md  2026-03-24-exclude-self-from-capture.md  2026-03-24-virtual-camera.md  2026-03-25-new-source-types.md  2026-03-25-preview-interaction.md  2026-03-25-resolution-detection.md  2026-03-26-dynamic-window-source.md  2026-03-26-recording-streaming.md  2026-03-26-ui-theming.md  2026-03-27-camera-extension-build.md  2026-03-27-dal-plugin.md  2026-03-31-animated-gif.md  2026-03-31-preview-live-split.md  2026-03-31-scene-properties-panel.md  2026-03-31-scene-transitions.md  2026-03-31-user-loadable-transitions.md  2026-04-01-shader-effects.md  2026-04-01-ui-polish-pass.md  2026-04-02-video-settings-fps-colorspace.md
docs/superpowers/specs/: 2026-03-19-dockable-panels-design.md  2026-03-19-dockview-layout-design.md  2026-03-19-lodestone-mvp-design.md  2026-03-20-preview-panel-wiring-design.md  2026-03-21-gstreamer-obs-integration-design.md  2026-03-21-settings-window-design.md  2026-03-21-unify-panel-logic-design.md  2026-03-22-audio-capture-design.md  2026-03-22-multi-source-compositor-design.md  2026-03-22-scene-construction-design.md  2026-03-22-ui-overhaul-design.md  2026-03-23-codebase-audit-simplification-design.md  2026-03-23-image-sources-design.md  2026-03-23-source-library-design.md  2026-03-23-transform-handles-design.md  2026-03-23-virtual-canvas-scaling-design.md  2026-03-23-window-camera-capture-design.md  2026-03-24-exclude-self-from-capture-design.md  2026-03-24-undo-redo-del-key-design.md  (+17 more)
lodestone-camera-dal/: Info.plist  LodestoneCamera.m
lodestone-camera-extension/: Info.plist  LodestoneCamera-signing.entitlements  LodestoneCamera.entitlements  README.md
lodestone-camera-extension/LodestoneCamera.xcodeproj/: project.pbxproj
lodestone-camera-extension/LodestoneHost/: ContentView.swift  LodestoneHost.entitlements  LodestoneHostApp.swift
lodestone-camera-extension/Sources/: Device.swift  Provider.swift  Stream.swift  main.swift
lodestone-hook/: Cargo.toml
lodestone-hook/src/: d3d11.rs  lib.rs  shared.rs  win32.rs
scripts/: bundle.sh  install-app.sh  install-xcode-host.sh
src/: color_source.rs  effect_registry.rs  image_source.rs  main.rs  mock_driver.rs  scene.rs  settings.rs  state.rs  system_extension.rs  text_source.rs  transition.rs  transition_registry.rs  window.rs  window_actions.rs
src/gstreamer/: capture.rs  commands.rs  devices.rs  disk.rs  encode.rs  error.rs  inject.rs  mod.rs  screencapturekit.rs  thread.rs  types.rs  virtual_camera.rs  window_watcher.rs
src/obs/: encoder.rs  mock.rs  mod.rs  output.rs  scene.rs
src/renderer/: compositor.rs  effect_pipeline.rs  mod.rs  pipelines.rs  preview.rs  secondary_canvas.rs  text.rs  transition.rs
src/ui/: audio_mixer.rs  draw_helpers.rs  library_panel.rs  live_panel.rs  mod.rs  preview_panel.rs  properties_panel.rs  scene_editor.rs  scenes_panel.rs  settings_modal.rs  settings_panel.rs  settings_window.rs  sources_panel.rs  stream_controls.rs  theme.rs  toolbar.rs  transform_handles.rs  window_picker.rs
(+52 files in other folders)
