[package]
name = "lodestone"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "29.0.0"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
# glyphon = "0.10"    # TODO: re-enable when glyphon supports wgpu 29 (egui-wgpu compat)
cosmic-text = "0.18"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
rand = "0.10.0"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
muda = "0.17.1"
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-audio = "0.23"
gstreamer-video = "0.23"
egui-phosphor = "0.11.0"
core-graphics = "0.25.0"
core-foundation = "0.10.1"
image = "0.25.10"
rfd = "0.17.2"

# macOS ScreenCaptureKit bindings (objc2 ecosystem)
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSDictionary", "NSError", "NSObject", "NSString", "NSThread", "NSUserDefaults", "NSValue"] }
objc2-io-surface = { version = "0.3", features = ["IOSurface"] }
objc2-screen-capture-kit = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
chrono = "0.4.44"

[dev-dependencies]
tempfile = "3"
